clusters/demo/server-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
