clusters/demo/server-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: home.ruby.caffeineforcode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-app-service
            port:
              number: 80
